# linutil

./: .gitignore  ARCHITECTURE.md  BUG_FIXES.md  BUG_FIXES_ROUND2.md  BUG_FIXES_ROUND3.md  BUILD_SUMMARY.md  DEVELOPMENT.md  FINAL_SUMMARY.md  INSTALL.md  LICENSE  QUICKSTART_FEDORA.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  UPDATE_GUIDE.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  setup.sh  test.sh  uninstall.sh
data/apps/: common.yaml
data/tweaks/: common.yaml  fedora.yaml  ubuntu.yaml
docs/: COLOR_PALETTE.md  HOSTING_GUIDE.md  UI_MODERNIZATION.md  UI_PREVIEW.md
src/linutil/: __init__.py  main.py
src/linutil/core/: config_loader.py  distro_detector.py  executor.py  terminal_executor.py
src/linutil/managers/: __init__.py  apt_manager.py  base_manager.py  dnf_manager.py
src/linutil/ui/: app.py  shortcuts.py  task_indicators.py  theme.py  tips.py
src/linutil/ui/screens/: __init__.py  apps_screen.py  tweaks_screen.py
